--- a/app/src/main/res/layout/fragment_add_power_hour.xml
+++ b/app/src/main/res/layout/fragment_add_power_hour.xml
@@ -9,83 +9,89 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <GridLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:columnCount="1"
-        android:padding="20dp"
-        android:rowCount="4">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/workoutNameLayout"
+        <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/add_ph_workout_name_hint"
-            app:endIconMode="custom"
-            app:endIconDrawable="@drawable/ic_drive_file_rename_24dp"
-            android:paddingBottom="20dp" >
+            android:columnCount="1"
+            android:padding="20dp"
+            android:rowCount="4">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/workoutNameText"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/workoutNameLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textCapWords" />
+                android:hint="@string/add_ph_workout_name_hint"
+                app:endIconMode="custom"
+                app:endIconDrawable="@drawable/ic_drive_file_rename_24dp"
+                android:paddingBottom="20dp" >
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/workoutNameText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textCapWords" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/durationLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/add_ph_duration_hint"
-            app:endIconMode="custom"
-            app:endIconDrawable="@drawable/ic_schedule_24dp"
-            android:paddingBottom="20dp">
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/durationText"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/durationLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/add_ph_duration_hint"
+                app:endIconMode="custom"
+                app:endIconDrawable="@drawable/ic_schedule_24dp"
+                android:paddingBottom="20dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/durationText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/typeLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/add_ph_type_hint"
+                android:paddingBottom="20dp">
+
+                <AutoCompleteTextView
+                    android:id="@+id/typeText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="none"
+                    tools:ignore="LabelFor" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/datePickerLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:clickable="true"
+                android:hint="@string/add_ph_date_hint"
+                app:endIconDrawable="@drawable/ic_calendar_event_24dp"
+                app:endIconMode="custom">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/typeLayout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/add_ph_type_hint"
-            android:paddingBottom="20dp">
+                <EditText
+                    android:id="@+id/datePickerText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusableInTouchMode="false"
+                    android:autofillHints=""
+                    android:inputType="date"
+                    tools:ignore="LabelFor" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <AutoCompleteTextView
-                android:id="@+id/typeText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="none"
-                tools:ignore="LabelFor" />
+        </GridLayout>
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/datePickerLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:hint="@string/add_ph_date_hint"
-            app:endIconDrawable="@drawable/ic_calendar_event_24dp"
-            app:endIconMode="custom">
-
-            <EditText
-                android:id="@+id/datePickerText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:focusableInTouchMode="false"
-                android:autofillHints=""
-                android:inputType="date"
-                tools:ignore="LabelFor" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-    </GridLayout>
+    </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
