--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -21,7 +21,7 @@
             android:text="@string/leaderboard_title" />
 
         <TextView
-            android:id="@+id/list_empty_text"
+            android:id="@+id/leaderboard_list_empty_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -29,7 +29,7 @@
             android:layout_marginTop="15dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/powerHourList"
+            android:id="@+id/leaderboard_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
