--- a/app/src/main/res/layout/fragment_user_power_hour_list.xml
+++ b/app/src/main/res/layout/fragment_user_power_hour_list.xml
@@ -9,10 +9,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/user_power_hour_list_empty_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:text="@string/user_ph_list_empty" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/powerHourList"
+            android:id="@+id/user_power_hour_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"
