--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,8 @@
             android:orientation="vertical"
             android:paddingTop="8dp">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
+                android:orientation="vertical"
                 android:id="@+id/company_points_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -27,21 +28,12 @@
                     style="@style/FragmentListTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/home_company_points_statistics_title"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
+                    android:text="@string/home_company_points_statistics_title" />
 
                 <RelativeLayout
                     android:id="@+id/company_points_layout_today"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/company_points_layout_header"
-                    app:layout_constraintVertical_bias="0.0"
-                    tools:layout_editor_absoluteX="0dp">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/company_points_layout_today_title"
@@ -63,9 +55,7 @@
                 <RelativeLayout
                     android:id="@+id/company_points_layout_week"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/company_points_layout_today"
-                    app:layout_constraintTop_toBottomOf="@+id/company_points_layout_today">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/company_points_layout_week_title"
@@ -87,9 +77,7 @@
                 <RelativeLayout
                     android:id="@+id/company_points_layout_month"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/company_points_layout_week"
-                    app:layout_constraintTop_toBottomOf="@+id/company_points_layout_week">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/company_points_layout_month_title"
@@ -108,34 +96,27 @@
 
                 </RelativeLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
             <!--            BT Power Hour Statistics-->
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:id="@+id/company_power_hours_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp">
+                android:layout_marginTop="25dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/company_power_hours_layout_header"
                     style="@style/FragmentListTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/home_company_power_hour_statistics_title"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:text="@string/home_company_power_hour_statistics_title" />
 
                 <RelativeLayout
                     android:id="@+id/company_power_hours_layout_today"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/company_power_hours_layout_header"
-                    app:layout_constraintVertical_bias="0.0"
-                    tools:layout_editor_absoluteX="0dp">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/company_power_hours_layout_today_title"
@@ -158,7 +139,6 @@
                     android:id="@+id/company_power_hours_layout_week"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/company_power_hours_layout_today"
                     app:layout_constraintTop_toBottomOf="@+id/company_power_hours_layout_today">
 
                     <TextView
@@ -181,9 +161,7 @@
                 <RelativeLayout
                     android:id="@+id/company_power_hours_layout_month"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/company_power_hours_layout_week"
-                    app:layout_constraintTop_toBottomOf="@+id/company_power_hours_layout_week">
+                    android:layout_height="wrap_content">
 
                     <TextView
                         android:id="@+id/company_power_hours_layout_month_title"
@@ -202,7 +180,7 @@
 
                 </RelativeLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
