--- a/app/src/main/res/layout/fragment_add_power_hour.xml
+++ b/app/src/main/res/layout/fragment_add_power_hour.xml
@@ -13,12 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <GridLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:columnCount="1"
             android:padding="20dp"
-            android:rowCount="4">
+            android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/workoutNameLayout"
@@ -89,7 +88,7 @@
                     tools:ignore="LabelFor"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-        </GridLayout>
+        </LinearLayout>
 
     </ScrollView>
 
